[package]
name = "esalarm"
version = "0.1.0"
authors = ["christian <christian.carnero@worcket.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.0"
config = { version = "0.9", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
